--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </head>
 <body>
+  <header style="background-color: black; height: 50px; color: white;" class="p-2 ">
+  <h4 class="p-1 ms-3">SBI Net Banking Service</h4>
+  </header>
   <app-root></app-root>
+  <footer style="background-color: black; height: 50px; color: white ;" class="p-2 text-center w-100 fixed-bottom">
+    <h4 class="p-1 ms-3 text-center">Banking Project @2023</h4>
+    </footer>
+  
 </body>
 </html>
