design_edit commit

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-  <header style="background-color: black; height: 35px; color: white;" class="p-2 ">
+  <header style="background-color: rgba(69, 152, 229, 0.49); height: 35px; color: white;" class="p-2 ">
   <h5 class=" ms-2 ">SBI Net Banking Service</h5>
   </header>
   <app-root></app-root>
-  <footer style="background-color: black; height: 35px; color: white ;" class="p-2 text-center w-100 fixed-bottom">
+  <footer style="background-color: rgba(69, 152, 229, 0.715); height: 35px; color: white ;" class="p-2 text-center w-100 fixed-bottom">
     <h5 class=" ms-2 text-center">Banking Project @2023</h5>
     </footer>
   
